--- a/Substrate/res/xml/eyecandy_settings.xml
+++ b/Substrate/res/xml/eyecandy_settings.xml
@@ -13,6 +13,15 @@
             android:defaultValue="2000" />
 
     <ListPreference
+            android:key="colourPalette"
+            android:title="@string/eyecandy_prefs_palette"
+            android:summary="@string/eyecandy_prefs_palette_summary"
+            android:entries="@array/eyecandy_prefs_palette_entries"
+            android:entryValues="@array/eyecandy_prefs_palette_values"
+            android:dialogTitle="@string/eyecandy_prefs_palette_title"
+            android:defaultValue="0" />
+
+    <ListPreference
             android:key="animSpeed"
             android:title="@string/eyecandy_prefs_speed"
             android:summary="@string/eyecandy_prefs_speed_summary"
