--- a/Substrate/res/values/arrays.xml
+++ b/Substrate/res/values/arrays.xml
@@ -258,21 +258,19 @@
     <!-- Node.Garden Preferences.                                          -->
     <!-- ################################################################# -->
 
-    <!-- Entry names for the run time menu. -->
-    <string-array name="nodes_prefs_cycles_entries">
-        <item>Short</item>
-        <item>Medium</item>
-        <item>Long</item>
+    <string-array name="nodes_prefs_pattern_entries">
+        <item>Linear</item>
+        <item>Circular</item>
+        <item>Random</item>
     </string-array>
 
-    <!-- Values for the run time menu. -->
-    <string-array name="nodes_prefs_cycles_values">
-        <item>3000</item>  
-        <item>6000</item>  
-        <item>12000</item>
+    <string-array name="nodes_prefs_pattern_values">
+        <item>0</item>  
+        <item>1</item>  
+        <item>-1</item>
     </string-array>
        
-         
+
     <!-- ################################################################# -->
     <!-- Help.                                                             -->
     <!-- ################################################################# -->
@@ -476,9 +474,7 @@ considered the substrate from which the nodes grow.\n\
 \n\
 The following preferences settings are available:\n\
 \n\
-• <b>Run time</b> sets the time (actually the number of computation
-cycles) the hack will run for before starting over.  Longer run times produce
-more dense patterns before resetting.\n\
+• <b>Initial arrangement</b> sets how the nodes are initially placed.\n\
 \n\
 j.tarbell August, 2004 / Albuquerque, New Mexico / complexification.net</item>
 
