--- a/Substrate/res/xml/nodes_settings.xml
+++ b/Substrate/res/xml/nodes_settings.xml
@@ -4,13 +4,13 @@
         android:title="@string/nodes_settings" >
 
     <ListPreference
-            android:key="maxCycles"
-            android:title="@string/nodes_prefs_cycles"
-            android:summary="@string/nodes_prefs_cycles_summary"
-            android:entries="@array/nodes_prefs_cycles_entries"
-            android:entryValues="@array/nodes_prefs_cycles_values"
-            android:dialogTitle="@string/nodes_prefs_cycles_title"
-            android:defaultValue="6000" />
+            android:key="nodePattern"
+            android:title="@string/nodes_prefs_pattern"
+            android:summary="@string/nodes_prefs_pattern_summary"
+            android:entries="@array/nodes_prefs_pattern_entries"
+            android:entryValues="@array/nodes_prefs_pattern_values"
+            android:dialogTitle="@string/nodes_prefs_pattern_title"
+            android:defaultValue="-1" />
 
 </PreferenceScreen>
 
